fix some alignment

--- a/EPCST/style.css
+++ b/EPCST/style.css
@@ -1,20 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Krona+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Black+Ops+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Arimo&display=swap');
 body {
 font-family: Arial, sans-serif;
-  margin: 0;
+margin: 0;
   padding: 0;
 }
 
 .logo {
 z-index: 1;
-  flex: absolute;
+flex: absolute;
 float: left;
 margin-left: 100px;
-  background: #fff;
+background: #fff;
 }
 
 .logo img {
 width: 230px;
-  padding-top: 180px;
+padding-top: 180px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
@@ -23,10 +26,14 @@ width: 230px;
 header {
 background-color: #B1E66B;
 display: flex;
-  align-items: center;
+align-items: center;
 justify-content: space-between;
 height: 100px;
 color: #fff;
+}
+header h1 {
+  margin: 0;
+  color: black;
 }
 
 /* Align the school name to the left */
@@ -38,7 +45,7 @@ justify-content: space-between;
 
 .schoolname {
 padding-left: 20px;
-  /* Add padding as needed for spacing */
+/* Add padding as needed for spacing */
   padding-top: 20px;
   font-size: 40px;
   color: black;
@@ -46,7 +53,7 @@ padding-left: 20px;
 
 .schoolname2 {
 padding-left: 20px;
-  /* Add padding as needed for spacing */
+/* Add padding as needed for spacing */
   margin: 0;
   font-size: 26px;
   color: black;
@@ -54,32 +61,32 @@ padding-left: 20px;
 
 /* start search style */
 .flexbox {
-  margin-right: 10px;
+margin-right: 10px;
   justify-content: center;
   align-items: center;
 }
 
 .search {
-  margin: 20px;
+margin: 20px;
 }
 
 .search>h3 {
-  font-weight: normal;
+font-weight: normal;
 }
 
 .search>h1,
 .search>h3 {
-  color: rgba(48, 46, 46, 0.774);
+color: rgba(48, 46, 46, 0.774);
   margin-bottom: 15px;
 }
 
 .search>div {
-  display: inline-block;
+display: inline-block;
   position: relative;
 }
 
 .search>div:after {
-  content: "";
+content: "";
   background: whitesmoke;
   width: 4px;
   height: 20px;
@@ -90,7 +97,7 @@ padding-left: 20px;
 }
 
 .search>div>input {
-  color: black;
+color: black;
   font-size: 16px;
   background: transparent;
   width: 25px;
@@ -103,29 +110,26 @@ padding-left: 20px;
 }
 
 .search>div>input::placeholder {
-  color: rgba(45, 44, 44, 0.771);
+color: rgba(45, 44, 44, 0.771);
   opacity: 0;
   transition: opacity 150ms ease-out;
 }
 
 .search>div>input:focus::placeholder {
-  opacity: 1;
+opacity: 1;
 }
 
 .search>div>input:focus,
 .search>div>input:not(:placeholder-shown) {
-  width: 250px;
+width: 250px;
 }
 /* end search style */
-header h1 {
-margin: 0;
-  color: black;
-}
+
 
 .container {
 z-index: 0;
 width: 100%;
-  height: 100px;
+height: 100px;
   box-sizing: border-box;
   justify-content: flex-end;
   background-color: #4A8100;
@@ -135,7 +139,7 @@ width: 100%;
 /* Start of style the navigation menu */
 .navigation {
 list-style: none;
-  padding: 0;
+padding: 0;
   margin: 0;
   display: flex;
   justify-content: flex-end;
@@ -145,22 +149,22 @@ list-style: none;
 /* Style each navigation item (list item) */
 .nav-item {
 margin-right: 20px;
-  position: relative;
+position: relative;
   /* Add this line to make sure ::after pseudo-element positions properly */
 }
 
 /* Style the navigation links */
 .nav-item a {
 text-decoration: none;
-  color: white;
+color: white;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 20px;
 position: relative;
 }
 
 /* Add a line beneath the navigation item when hovered */
 .nav-item a::after {
-  content: "";
+content: "";
   display: block;
   width: 0;
   height: 2px;
@@ -172,15 +176,14 @@ position: relative;
 }
 
 .nav-item a:hover::after {
-  width: 100%;
+width: 100%;
 }
 /* End of style the navigation menu */
 
 .background {
-  z-index: 0;
-  height: 100vh;
+height: 100vh;
   box-sizing: border-box;
-  position: relative;
+/* position: relative; */
   clip-path: polygon(35% 0%, 100% 0%, 100% 100%, 35% 100%, 50% 50%);
   background-image: url(img/NPB-0008.jpg);
   background-repeat: no-repeat;
@@ -188,37 +191,104 @@ position: relative;
 }
 
 .info {
-  z-index: 1;
-  position: absolute;
-  top: 60%;
+position: absolute;
+top: 70%;
   left: 28%;
   transform: translate(-50%, -50%);
   padding: 10px;
   text-align: left;
   max-width: 50%;
+line-height: 1vh;
 }
 .info p:first-child {
-  font-size: 34px;
-  margin: 10px 0;
+color: #000;
+  font-family: Krona One;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0%;
 }
 .info p:nth-child(2) {
-  font-size: 54px;
-  margin: 10px 0;
+color: #69B800;
+  font-family: Black Ops One;
+  font-size: 85px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 0%;
+  letter-spacing: 4.25px;
+}
+
+.info p:nth-child(3) {
+  width: 50%;
+}
+
+.info p:nth-child(4) {
+  color: #000;
+  text-align: justify;
+  font-family: Arimo;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: normal;
+  width: 60%;
 }
 
 .line::after {
-  content: "";
+content: "";
   display: block;
   border-top: 1px solid black;
   margin-top: 5px;
 }
 
-.info button {
-  background-color: #0074d9;
-  color: #fff;
+.button_div {
+  display: flex;
+  width: 40%;
+  justify-content: space-between;
+}
+
+.info button:first-child {
   border: none;
-  padding: 10px 20px;
-  margin: 10px;
-  font-size: 18px;
-  cursor: pointer;
+font-size: large;
+  font-family: Arimo;
+  width: 45%;
+  height: 55px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #579504;
+}
+
+.info button:nth-child(2) {
+  border: none;
+  font-size: large;
+  font-family: Arimo;
+  width: 45%;
+  height: 55px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #CC1717;
+}
+
+
+/* Search bar styles for smaller screens (mobile) */
+@media (max-width: 767px) {
+  .flexbox {
+    margin-right: 0;
+  }
+
+  .search {
+    margin: 10px;
+}
+
+.search>h1,
+.search>h3 {
+  font-size: 16px;
+}
+
+.search>div::after {
+  top: 20px;
+}
+
+.search>div>input {
+  font-size: 14px;
+}
 }
